--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <button onclick="window.location"=""></button>
+  <button onclick="location.href='ghaida.html'">Ghaida</button>
   <button onclick="window.location"=""></button>
   
 </body>
