--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <button onclick="location.href='ghaida.html'">Ghaida</button>
-  <button onclick="gilocation.href='mada.html'"></button>
+  <button onclick="location.href='mada.html'">Mada</button>
   
 </body>
 </html>
