--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1><i>This is our main page</i></h1>
   <button onclick="location.href='ghaida.html'">Ghaida</button>
   <button onclick="location.href='mada.html'">Mada</button>
   
