added back button for UI enhancment

--- a/ghaida.html
+++ b/ghaida.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <img src="https://t4.ftcdn.net/jpg/03/58/76/51/360_F_358765158_k0nkdnuvJD1ovT17NsBSw9jkMJKbfbqF.jpg" alt="" srcset="" width="60" onclick="location.href='index.html'">
   <p>My favorite book:</p>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIpJtzPn14xVVUtNIVjTlzS9B9ir6NEhcatg&s" alt="Image not showing" width="300px" height="300px">
   <hr>
