--- a/mada.html
+++ b/mada.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="https://t4.ftcdn.net/jpg/03/58/76/51/360_F_358765158_k0nkdnuvJD1ovT17NsBSw9jkMJKbfbqF.jpg" alt="" srcset="" width="60" onclick="location.href='index.html'">
     <h1>كتابي المفضل</h1>
     <h2>القرآن</h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ42bx09I_6hep1ncVY7HOiiVJZPU25W_4iNQ&s" alt="Quran" srcset="" width="150" height="300"><br>
